Added Quick Actions, Need to test.

--- a/Notes/Info.plist
+++ b/Notes/Info.plist
@@ -30,6 +30,17 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutItemIconTypeCompose</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>compose</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Add Note</string>
+		</dict>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
