Finished Quick Actions, still need to finish 3d touch implementation
-From my mom's laptop

--- a/Notes/Info.plist
+++ b/Notes/Info.plist
@@ -34,11 +34,13 @@
 	<array>
 		<dict>
 			<key>UIApplicationShortcutItemIconType</key>
-			<string>UIApplicationShortcutItemIconTypeCompose</string>
-			<key>UIApplicationShortcutItemType</key>
-			<string>compose</string>
+			<string>UIApplicationShortcutIconTypeCompose</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>Compose a New Note</string>
 			<key>UIApplicationShortcutItemTitle</key>
 			<string>Add Note</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>compose</string>
 		</dict>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
